src/objects/CD_BOM_Structure__c.object
<CustomObject>
    <fields>
        <fullName>BOM_Disable_date__c</fullName>
        <label>BOM Disable date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BOM_ID__c</fullName>
        <externalId>true</externalId>
        <label>BOM ID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BOM_Rev_No__c</fullName>
        <label>BOM Rev No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOM_effective_date__c</fullName>
        <label>BOM effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_Item_Disable_date__c</fullName>
        <label>Child Item Disable date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_Item_IOD_IN__c</fullName>
        <label>Child Item IOD IN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Item</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD BOM Structure</relationshipLabel>
        <relationshipName>CD_BOM_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Item_effective_date__c</fullName>
        <label>Child Item effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Type__c</fullName>
        <label>DM Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI_Cost_Flag__c</fullName>
        <label>NPI Cost Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Cost_Flag_update_date__c</fullName>
        <label>NPI Cost Flag update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrganizationCode_IOD_IN__c</fullName>
        <label>OrganizationCode IOD IN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrganizationCode</label>
        <referenceTo>CD_Organizations__c</referenceTo>
        <relationshipLabel>CD BOM Structure</relationshipLabel>
        <relationshipName>CD_BOM_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Assembly_IOD_IN__c</fullName>
        <label>Parent Assembly IOD IN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Assembly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Assembly</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD BOM Structure (Parent Assembly)</relationshipLabel>
        <relationshipName>CD_BOM_Structure1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_Cost_Flag__c</fullName>
        <label>Prod Cost Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Cost_Flag_update_date__c</fullName>
        <label>Prod Cost Flag update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Assembly_IOD_IN__c</fullName>
        <label>Top Level Assembly IOD IN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Assembly_Name__c</fullName>
        <formula>Top_Level_Assembly__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Level Assembly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Assembly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level Assembly</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD BOM Structure (Top Level Assembly)</relationshipLabel>
        <relationshipName>CD_BOM_Structure2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_External_Key__c</fullName>
        <formula>Top_Level_Assembly__r.Item_Number__c&amp;&apos;-&apos;&amp;Parent_Assembly__r.Item_Number__c&amp;&apos;-&apos;&amp;Child_Item__r.Item_Number__c&amp;&apos;-&apos;&amp;OrganizationCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique External Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier_In_BOM_Structure__c</fullName>
        <formula>Top_Level_Assembly__r.Name +  OrganizationCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Identifier In BOM Structure</label>
        <type>Text</type>
    </fields>
    <label>CD BOM Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OrganizationCode__c</columns>
        <columns>Top_Level_Assembly__c</columns>
        <columns>Unique_Identifier_In_BOM_Structure__c</columns>
        <columns>Child_Item__c</columns>
        <columns>Parent_Assembly_IOD_IN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_Level_Assembly__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD BOM Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD BOM Structure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>